// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Player when ControlsBar is hidden it renders correctly 1`] = `
<div
  className="css-rn2qmu"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
>
  <video
    height={480}
    onClick={[Function]}
    onLoadedMetadata={[Function]}
    onTimeUpdate={[Function]}
    src={null}
  />
</div>
`;

exports[`Player when is playing it renders correctly 1`] = `
<div
  className="css-1i901l3"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
>
  <video
    height={480}
    onClick={[Function]}
    onLoadedMetadata={[Function]}
    onTimeUpdate={[Function]}
    src={null}
  />
  <div
    className="css-ahjn9t"
  >
    <div
      className="css-12pnkes"
    >
      <input
        className="css-19h4nxv"
        max={0}
        onChange={[Function]}
        size="0.2em"
        step="any"
        type="range"
        value={0}
      />
      <div
        className="css-1voc2x1"
      />
    </div>
    <div
      className="css-12alag6"
    >
      <span
        className="css-bcxn3o"
        onClick={[Function]}
      >
        <svg
          className="css-diyyq9"
          color="hsla(0, 0%, 100%, 0.8)"
          height="1.2em"
          viewBox="0 0 24 24"
          width="1.2em"
        >
          <path
            d="M6 19h4V5H6v14zm8-14v14h4V5h-4z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
      <span
        className="css-bcxn3o"
        onClick={[Function]}
      >
        <svg
          className="css-diyyq9"
          color="hsla(0, 0%, 100%, 0.8)"
          height="1.2em"
          viewBox="0 0 24 24"
          width="1.2em"
        >
          <path
            d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
      <span
        className="css-bcxn3o"
      >
        <div
          className="css-1i8pure"
        >
          <input
            className="css-1thazes"
            max={1}
            onChange={[Function]}
            size="0.15em"
            step="any"
            type="range"
            value={1}
          />
          <div
            className="css-1jwjj7r"
          />
        </div>
      </span>
      <span
        className="css-1g6ztab"
      >
        00:00:00 / 00:00:00
      </span>
    </div>
  </div>
</div>
`;

exports[`Player without props it renders correctly 1`] = `
<div
  className="css-1i901l3"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
>
  <video
    height={480}
    onClick={[Function]}
    onLoadedMetadata={[Function]}
    onTimeUpdate={[Function]}
    src={null}
  />
  <div
    className="css-ahjn9t"
  >
    <div
      className="css-12pnkes"
    >
      <input
        className="css-19h4nxv"
        max={0}
        onChange={[Function]}
        size="0.2em"
        step="any"
        type="range"
        value={0}
      />
      <div
        className="css-1voc2x1"
      />
    </div>
    <div
      className="css-12alag6"
    >
      <span
        className="css-bcxn3o"
        onClick={[Function]}
      >
        <svg
          className="css-diyyq9"
          color="hsla(0, 0%, 100%, 0.8)"
          height="1.2em"
          viewBox="0 0 24 24"
          width="1.2em"
        >
          <path
            d="M8 5v14l11-7z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
      <span
        className="css-bcxn3o"
        onClick={[Function]}
      >
        <svg
          className="css-diyyq9"
          color="hsla(0, 0%, 100%, 0.8)"
          height="1.2em"
          viewBox="0 0 24 24"
          width="1.2em"
        >
          <path
            d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
      <span
        className="css-bcxn3o"
      >
        <div
          className="css-1i8pure"
        >
          <input
            className="css-1thazes"
            max={1}
            onChange={[Function]}
            size="0.15em"
            step="any"
            type="range"
            value={1}
          />
          <div
            className="css-1jwjj7r"
          />
        </div>
      </span>
      <span
        className="css-1g6ztab"
      >
        00:00:00 / 00:00:00
      </span>
    </div>
  </div>
</div>
`;
